set up css, jquery, include media

--- a/resources/css/sass/prepros.config
+++ b/resources/css/sass/prepros.config
@@ -929,6 +929,12 @@
     },
     "files": [
       {
+        "file": "_breakpoints.scss",
+        "config": {
+          "customOutput": "/Users/zaidan/Desktop/Laravel/RealTimeChat/public/css/_breakpoints.css"
+        }
+      },
+      {
         "file": "chat.scss",
         "config": {
           "customOutput": "/Users/zaidan/Desktop/Laravel/RealTimeChat/public/css/chat.css"
